[package]
name = "rfem"
version = "0.1.0"
authors = ["shinichi <t-shin-komae>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13"
ndarray-linalg="0.12"
openblas-src = "0.7"
gmsh-v2-parser = {git = "https://github.com/t-shin-komae/rust-msh-v2-parser"}
